--- a/polybar/config
+++ b/polybar/config
@@ -63,23 +63,6 @@ modules-right =                     network-traffic
 tray-position =                     none
 
 ;==========================================================
-[bar/bar1a]
-;==========================================================
-
-inherit =                           bar/bar1
-
-;==========================================================
-[bar/bar1b]
-;==========================================================
-
-inherit =                           bar/bar1
-
-border-left-size =                  0
-border-right-size =                 0
-border-top-size =                   0
-border-bottom-size =                0
-
-;==========================================================
 [bar/bar2]
 ;==========================================================
 
@@ -93,24 +76,7 @@ modules-right =                     f1 f2 f3 f4 f5 memory cpu
 tray-position =                     right
 tray-padding =                      1
 tray-maxsize =                      20
-tray-background =                   #000000
-
-;==========================================================
-[bar/bar2a]
-;==========================================================
-
-inherit =                           bar/bar2
-
-;==========================================================
-[bar/bar2b]
-;==========================================================
-
-inherit =                           bar/bar2
-
-border-left-size =                  0
-border-right-size =                 0
-border-top-size =                   0
-border-bottom-size =                0
+tray-background =                   ${colors.background}
 
 ;==========================================================
 [module/time]
