--- a/i3/config
+++ b/i3/config
@@ -9,7 +9,7 @@ popup_during_fullscreen                 leave_fullscreen
 
 # i3-gaps
 gaps inner                              12
-gaps outer                              -6
+gaps outer                              -5
 
 ## SET VARIABLES
 
@@ -46,11 +46,12 @@ set $dswap                              /mnt/Gog/Scripts/display-swap.sh
 set $yaws                               /mnt/Gog/repos/yaws/yaws.sh
 set $rofiyaws                           /mnt/Gog/repos/yaws/yaws_rofi.sh
 set $polybar                            /mnt/Gog/Scripts/polylaunch.sh
+set $vbox                               /mnt/Gog/Scripts/rofi-vbox.sh
 
 # Directories
 set $scrotd                             /mnt/Gog/Pictures/scrots/
 set $zome                               /mnt/Gog/
-set $temp				                /mnt/Gog/Temp
+set $temp				                        /mnt/Gog/Temp
 
 # Default workspaces
 set $ws1                                "1"
@@ -155,6 +156,8 @@ bindsym $mod+Delete                     exec --no-startup-id $pmenu
 bindsym $mod+e                          exec --no-startup-id rofimoji
 # Run dialogue
 bindsym $mod+o                          exec --no-startup-id rofi -show run
+# Start virtual machine
+bindsym $mod+Control+v                  exec --no-startup-id $vbox
 # Split horizontal
 bindsym $mod+h                          split h; exec notify-send 'horizontal split'
 # Split vertical
@@ -192,9 +195,9 @@ bindsym $mod+Shift+b                    exec $polybar
 # Move to scratchpad
 bindsym $mod+minus                      move scratchpad
 # Dropdown JACK patchbay
-bindsym $mod+j                          [title="Carla"] scratchpad show, resize set 1400 800, move position center
+bindsym $mod+j                          [title="Carla"] scratchpad show, resize set 1200 700, move position center
 # Dropdown email
-bindsym $mod+m                          [class="Rambox"] scratchpad show, resize set 1400 800, move position center
+bindsym $mod+m                          [class="Surf" title="Inbox"] scratchpad show, resize set 1200 700, move position center
 # Screenshot - full
 bindsym $mod+Print                      exec flameshot full -p $scrotd
 # Screenshot - screen
@@ -212,7 +215,7 @@ bindsym $mod+a                          exec --no-startup-id $yaws sp
 # Delete paper
 bindsym $mod+Shift+a                    exec --no-startup-id $yaws jp
 # YAWS rofi menu
-bindsym $mod+Shift+u			        exec --no-startup-id $rofiyaws
+bindsym $mod+Shift+u			              exec --no-startup-id $rofiyaws
 
 # Restart Carla
 bindsym $mod+Shift+j                    exec carla-jack-multi /mnt/Magog/Audio_Projects/carla patches/carla_default.carxp
@@ -280,14 +283,15 @@ for_window [title="yaws" class="feh"]                   floating enable
 for_window [class="Nvidia-settings"]                    floating enable
 for_window [title="butt 0.1.18"]                        floating enable, move position center
 for_window [title="Clock"]                              floating enable, resize set 600 250
-for_window [class="Surf"]                               floating enable, resize set 1400 800, move position center
 for_window [class="Clementine"]                         floating enable
 for_window [class="Gucharmap"]                          floating enable
+for_window [class="Cadence"]                            floating enable, move position center
 for_window [class="dupeGuru"]                           floating enable, move position center
-for_window [class="qjackctl"]                           floating enable, move position center
+for_window [class="QjackCtl"]                           floating enable, move position center
 for_window [class="qwinff"]                             floating enable, move position center
+for_window [class="VirtualBox Manager"]                 floating enable, move position center
 
-for_window [class="Mixxx" title="Preferences"]		    move position center
+for_window [class="Mixxx" title="Preferences"]		      move position center
 
 for_window [title="stickyterm"]                         floating enable, sticky enable, resize set 1100 600, move position center
 
@@ -299,9 +303,10 @@ for_window [class="Audacity"]                           focus
 for_window [class="Vivaldi-stable"]                     focus
 for_window [class="GitKraken"]                          focus
 for_window [class="Typora"]                             focus
+for_window [class="VirtualBox Machine"]                 focus
 
-for_window [class="Carla2-Multi-Client"]                move scratchpad
-for_window [class="Rambox"]                             move scratchpad
+for_window [class="Carla2-Multi-Client" window_type="normal"] move scratchpad
+for_window [class="Surf" window_type="normal"]                move scratchpad
 
 # Program assignments
 assign [class="Vivaldi-stable" window_type="normal"]    workspace number $ws1
@@ -309,7 +314,8 @@ assign [class="code-oss" window_type="normal"]          workspace number $ws2
 assign [class="GLFW-Application"]                       workspace number $ws3
 assign [class="GitKraken"]                              workspace number $ws4
 assign [class="Gimp"]                                   workspace number $ws5
-assign [class="Audacity"]                               workspace number $ws6
+assign [class="VirtualBox Machine"]                     workspace number $ws6
+assign [class="Audacity"]                               workspace number $ws7
 assign [class="Mixxx" window_type="normal"]             workspace number $ws8
 assign [class="Typora"]                                 workspace number $ws9
 
@@ -321,11 +327,13 @@ exec --no-startup-id                                    numlockx on
 exec --no-startup-id                                    megasync
 exec --no-startup-id                                    pamac-tray
 exec --no-startup-id                                    $dpmsoff
-exec --no-startup-id                                    rambox
+exec --no-startup-id                                    surf -z 1.2 https://mail.google.com/mail/u/0/#inbox
 exec --no-startup-id 					                sh /home/zero/.fehbg
-exec --no-startup-id 					                qjackctl
+#exec --no-startup-id 					                cadence --minimized
+exec --no-startup-id                                    qjackctl
 exec --no-startup-id                                    carla-jack-multi /mnt/Magog/Audio_Projects/carla patches/carla_default.carxp
 exec --no-startup-id                                    udiskie -t
+exec --no-startup-id                                    gnome-gmail-notifier
 exec_always --no-startup-id                             nm-applet
 exec_always --no-startup-id                             i3altlayout
 exec_always --no-startup-id                             i3wsr
