--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -64,12 +64,12 @@ font_size 13.0
 #: Default cursor color
 
 # cursor_text_color #111111
-
+cursor_text_color background
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
 
-# cursor_shape block
+cursor_shape underline
 
 #: The cursor shape can be one of (block, beam, underline)
 
