--- a/polybar/config
+++ b/polybar/config
@@ -50,9 +50,9 @@ padding-right =                     1
 module-margin-left =                0
 module-margin-right =               1
 
-font-0 =                            Inconsolata:size=12;3
+font-0 =                            Liberation-mono-regular:size=8;3
 font-1 =                            fontawesome-regular:style=Solid:size=12;3
-font-2 =                            Inconsolata:style=bold:size=12;3
+font-2 =                            Liberation-mono-bold:size=8;3
 
 enable-ipc =                        true
 
