--- a/i3wsr/config.toml
+++ b/i3wsr/config.toml
@@ -25,7 +25,7 @@ Cadence = ""
 "Gimp-2.10" = ""
 "GLFW-Application" = ""
 Typora = ""
-GitKraken = ""
+GitKraken = ""
 
 [aliases]
 firefox = "Firefox"
