--- a/i3/config
+++ b/i3/config
@@ -112,8 +112,8 @@ bindsym $mod+Shift+0                    move container to workspace number $ws10
 
 # Terminal
 bindsym $mod+Return                     exec $term -d $zome
-# Firefox
-bindsym $mod+F1                         exec --no-startup-id firefox
+# Vivaldi
+bindsym $mod+F1                         exec --no-startup-id vivaldi-stable
 # VS Code
 bindsym $mod+F2                         exec --no-startup-id code
 # PCmanFM
@@ -197,7 +197,7 @@ bindsym $mod+minus                      move scratchpad
 # Dropdown JACK patchbay
 bindsym $mod+j                          [title="Carla"] scratchpad show, resize set 1200 700, move position center
 # Dropdown email
-bindsym $mod+m                          [class="Thunderbird"] scratchpad show, resize set 1200 700, move position center
+bindsym $mod+m                          [class="Thunderbird"] scratchpad show, resize set 1200 900, move position center
 # Screenshot - full
 bindsym $mod+Print                      exec flameshot full -p $scrotd
 # Screenshot - screen
@@ -304,7 +304,7 @@ for_window [class="Gimp"]                               focus
 for_window [class="Mixxx"]                              focus
 for_window [class="code-oss"]                           focus
 for_window [class="Audacity"]                           focus
-for_window [class="firefox"]                            focus
+for_window [class="Vivaldi-stable"]                     focus
 for_window [class="GitKraken"]                          focus
 for_window [class="Typora"]                             focus
 for_window [class="VirtualBox Machine"]                 focus
@@ -313,7 +313,7 @@ for_window [class="Carla2-Multi-Client" window_type="normal"]               move
 for_window [class="Thunderbird" instance="Mail" window_type="normal"]       move scratchpad
 
 # Program assignments
-assign [class="firefox" window_type="normal"]           workspace number $ws1
+assign [class="Vivaldi-stable" window_type="normal"]    workspace number $ws1
 assign [class="code-oss" window_type="normal"]          workspace number $ws2
 assign [class="GLFW-Application"]                       workspace number $ws3
 assign [class="GitKraken"]                              workspace number $ws4
@@ -325,7 +325,7 @@ assign [class="Typora"]                                 workspace number $ws9
 
 # Autostart
 
-exec_always --no-startup-id                             compton -b
+exec_always --no-startup-id                             picom -b
 exec --no-startup-id                                    /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id                                    numlockx on
 exec --no-startup-id                                    megasync
