--- a/i3wsr/config.toml
+++ b/i3wsr/config.toml
@@ -44,3 +44,4 @@ multibootusb = "MultibootUSB"
 Pamac-manager = "Pamac"
 "Gimp-2.10" = "Gimp"
 "GLFW-Application" = "VCV Rack"
+"Maitreya8.bin" = "Maitreya"
