--- a/i3/config
+++ b/i3/config
@@ -323,7 +323,7 @@ assign [class="Typora"]                                 workspace number $ws9
 
 exec_always --no-startup-id                             picom -b
 exec --no-startup-id                                    /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id                                    numlockx on
+exec --no-startup-id                                    xdotool key --clearmodifiers Num_Lock
 exec --no-startup-id                                    megasync
 exec --no-startup-id                                    $dpmsoff
 exec --no-startup-id                                    thunderbird
