--- a/polybar/config
+++ b/polybar/config
@@ -65,7 +65,7 @@ cursor-scroll =                     ns-resize
 ;==========================================================
 
 inherit =                           bar/master
-monitor =                           DVI-D-0
+monitor =                           DVI-D-1
 
 modules-left =                      i3
 modules-center =                    popup-calendar
@@ -78,11 +78,11 @@ tray-position =                     none
 ;==========================================================
 
 inherit =                           bar/master
-monitor =                           HDMI-0
+monitor =                           HDMI-1
 
 modules-left =                      i3
 modules-center =                    time
-modules-right =                     f1 f2 f6 f3 f4 f5 memory cpu 
+modules-right =                     f1 f2 f3 f4 f5 memory cpu 
 
 tray-position =                     right
 tray-padding =                      1
@@ -164,18 +164,6 @@ mount-0 =                           /mnt/Angel
 
 label-mounted =                     %{F#3597F0}Angel:%{F-} %percentage_used:02%%
 label-unmounted =                   Angel not mounted
-label-unmounted-foreground =        ${colors.foreground-alt}
-
-;==========================================================
-[module/f6]
-;==========================================================
-
-inherit =                           network/master
-
-mount-0 =                           /mnt/scratch
-
-label-mounted =                     %{F#3597F0}scratch:%{F-} %percentage_used:02%%
-label-unmounted =                   scratch not mounted
 label-unmounted-foreground =        ${colors.foreground-alt}
 
 ;==========================================================
