--- a/i3/config
+++ b/i3/config
@@ -118,8 +118,8 @@ bindsym $mod+F3                         exec --no-startup-id pcmanfm $zome
 bindsym $mod+F4                         exec --no-startup-id gimp
 # VCV Rack
 bindsym $mod+F5                         exec --no-startup-id vcvrack
-# Mousepad
-bindsym $mod+F6                         exec --no-startup-id mousepad
+# Leafpad
+bindsym $mod+F6                         exec --no-startup-id leafpad
 # Audacity
 bindsym $mod+F7                         exec --no-startup-id audacity
 # Mixxx
