--- a/polybar/config
+++ b/polybar/config
@@ -48,8 +48,8 @@ border-color =                      #00000000
 padding-left =                      3
 padding-right =                     3
 
-module-margin-left =                0
-module-margin-right =               1
+module-margin-left =                2
+module-margin-right =               2
 
 font-0 =                            Roboto-regular:size=13;3
 font-1 =                            fontawesome-regular:style=Solid:size=12;3
@@ -68,7 +68,7 @@ inherit =                           bar/master
 monitor =                           DVI-D-1
 
 modules-left =                      i3
-modules-center =                    popup-calendar
+modules-center =                    time popup-calendar
 modules-right =                     arch-updates network-traffic
 
 tray-position =                     none
@@ -81,13 +81,20 @@ inherit =                           bar/master
 monitor =                           HDMI-1
 
 modules-left =                      i3
-modules-center =                    time
+modules-center =                    obstrat
 modules-right =                     f1 f2 f3 f4 f5 memory cpu 
 
 tray-position =                     right
 tray-padding =                      1
 tray-maxsize =                      20
 tray-background =                   ${colors.background}
+
+;==========================================================
+[module/obstrat]
+;==========================================================
+type =                              custom/script
+exec =                              fortune oblique-strategies
+interval =                          300
 
 ;==========================================================
 [module/time]
@@ -97,6 +104,7 @@ time =                              %H:%M
 label =                             %time%
 label-font =                        3
 interval =                          5
+
 
 ;==========================================================
 [network/master]
