--- a/polybar/config
+++ b/polybar/config
@@ -122,7 +122,7 @@ inherit =                           network/master
 
 mount-0 =                           /
 
-label-mounted =                     %{F#3597F0}root:%{F-} %percentage_used:02%%
+label-mounted =                     %{F#3597F0}r:%{F-} %percentage_used:02%%
 label-unmounted =                   root not mounted
 label-unmounted-foreground =        ${colors.foreground-alt}
 
@@ -134,7 +134,7 @@ inherit =                           network/master
 
 mount-0 =                           /home
 
-label-mounted =                     %{F#3597F0}home:%{F-} %percentage_used:02%%
+label-mounted =                     %{F#3597F0}h:%{F-} %percentage_used:02%%
 label-unmounted =                   home not mounted
 label-unmounted-foreground =        ${colors.foreground-alt}
 
@@ -146,7 +146,7 @@ inherit =                           network/master
 
 mount-0 =                           /mnt/Gog
 
-label-mounted =                     %{F#3597F0}Gog:%{F-} %percentage_used:02%%
+label-mounted =                     %{F#3597F0}G:%{F-} %percentage_used:02%%
 label-unmounted =                   Gog not mounted
 label-unmounted-foreground =        ${colors.foreground-alt}
 
@@ -158,7 +158,7 @@ inherit =                           network/master
 
 mount-0 =                           /mnt/Magog
 
-label-mounted =                     %{F#3597F0}Magog:%{F-} %percentage_used:02%%
+label-mounted =                     %{F#3597F0}M:%{F-} %percentage_used:02%%
 label-unmounted =                   Magog not mounted
 label-unmounted-foreground =        ${colors.foreground-alt}
 
@@ -170,7 +170,7 @@ inherit =                           network/master
 
 mount-0 =                           /mnt/Angel
 
-label-mounted =                     %{F#3597F0}Angel:%{F-} %percentage_used:02%%
+label-mounted =                     %{F#3597F0}A:%{F-} %percentage_used:02%%
 label-unmounted =                   Angel not mounted
 label-unmounted-foreground =        ${colors.foreground-alt}
 
