ditching tmux - discovering kitty depths

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -178,7 +178,7 @@ cursor_shape underline
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
 
-# focus_follows_mouse no
+focus_follows_mouse yes
 
 #: Set the active window to the window under the mouse when moving the
 #: mouse around
@@ -326,21 +326,21 @@ active_border_color #4C9277
 
 #: Tab bar {{{
 
-tab_bar_edge top
+tab_bar_edge bottom
 
 #: Which edge to show the tab bar on, top or bottom
 
-tab_bar_margin_width 0.0
+tab_bar_margin_width 5.0
 
 #: The margin to the left and right of the tab bar (in pts)
 
-tab_bar_style separator
+tab_bar_style fade
 
 #: The tab bar style, can be one of: fade, separator or hidden. In the
 #: fade style, each tab's edges fade into the background color, in the
 #: separator style, tabs are separated by a configurable separator.
 
-# tab_fade 0.25 0.5 0.75 1
+tab_fade 0.25 0.5
 
 #: Control how each tab fades into the background when using fade for
 #: the tab_bar_style. Each number is an alpha (between zero and one)
@@ -354,7 +354,7 @@ tab_separator " "
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_title_template {title}
+tab_title_template {index}:{title}
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -364,7 +364,7 @@ tab_separator " "
 # active_tab_foreground   #000
 # active_tab_background   #eee
 active_tab_font_style   normal
-# inactive_tab_foreground #444
+inactive_tab_foreground #ddd
 # inactive_tab_background #999
 # inactive_tab_font_style normal
 
@@ -379,7 +379,7 @@ active_tab_font_style   normal
 
 #: The foreground and background colors
 
-background_opacity         0.8
+background_opacity         0.6
 # dynamic_background_opacity no
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
