--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Inconsolata-g
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      Bitstream Vera Sans Mono
+bold_font        Bitstream Vera Sans Mono Bold
+italic_font      Bitstream Vera Sans Mono Oblique
+bold_italic_font Bitstream Vera Sans Mono Bold Oblique
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
@@ -330,6 +330,10 @@ tab_bar_edge bottom
 
 #: Which edge to show the tab bar on, top or bottom
 
+tab_bar_min_tabs 1
+
+# The minimum number of tabs that must exist before the tab bar is shown
+
 tab_bar_margin_width 5.0
 
 #: The margin to the left and right of the tab bar (in pts)
@@ -349,7 +353,7 @@ tab_fade 0.25 0.5
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-tab_separator " "
+# tab_separator " "
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
@@ -361,12 +365,13 @@ tab_title_template {index}:{title}
 #: like: {index}: {title}. Useful if you have shortcuts mapped for
 #: goto_tab N.
 
-# active_tab_foreground   #000
-# active_tab_background   #eee
+active_tab_foreground   #eee
+active_tab_background   #000
 active_tab_font_style   normal
-inactive_tab_foreground #ddd
-# inactive_tab_background #999
-# inactive_tab_font_style normal
+inactive_tab_foreground #000
+inactive_tab_background #ddd
+inactive_tab_font_style italic
+tab_bar_background      #999
 
 #: Tab bar colors and styles
 
@@ -503,7 +508,7 @@ color21 #ebdbb2
 #: --login to ensure that the shell starts in interactive mode and
 #: reads its startup rc files.
 
-# editor .
+editor nano
 
 #: The console editor to use when editing the kitty config file or
 #: similar tasks. A value of . means to use the environment variable
@@ -521,7 +526,7 @@ color21 #ebdbb2
 #: to yes means that any background processes still using the terminal
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
-# allow_remote_control no
+allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
