--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -51,7 +51,7 @@ fade-out-step = 0.03;
 fade-exclude = [ ];
 
 # Other
-backend = "xrender";
+backend = "glx";
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 # use-ewmh-active-win = true;
@@ -70,9 +70,9 @@ invert-color-include = [ ];
 # resize-damage = 1;
 
 # GLX backend
-# glx-no-stencil = true;
-# glx-no-rebind-pixmap = true;
-# xrender-sync-fence = true;
+glx-no-stencil = true;
+glx-no-rebind-pixmap = true;
+xrender-sync-fence = true;
 use-damage = true;
 
 # Window type settings
