--- a/i3/config
+++ b/i3/config
@@ -106,8 +106,8 @@ bindsym $mod+Shift+0                    move container to workspace number $ws10
 
 # Terminal
 bindsym $mod+Return                     exec $term -d $zome
-# Brave
-bindsym $mod+F1                         exec --no-startup-id brave
+# Firefox
+bindsym $mod+F1                         exec --no-startup-id firefox
 # VS Code
 bindsym $mod+F2                         exec --no-startup-id code
 # PCmanFM
@@ -170,8 +170,6 @@ bindsym $mod+Shift+x                    move container to output right
 bindsym $mod+bracketleft                workspace prev_on_output
 # Next workspace on_output
 bindsym $mod+bracketright               workspace next_on_output
-# Layout manager
-bindsym $mod+l                          exec --no-startup-id i3-layout-manager
 # Reload i3 config
 bindsym $mod+Shift+c                    reload
 # Restart i3 inplace
@@ -289,7 +287,7 @@ for_window [class="Gimp"]                               focus
 for_window [class="Mixxx"]                              focus
 for_window [class="code-oss"]                           focus
 for_window [class="Audacity"]                           focus
-for_window [class="Brave-browser"]                      focus
+for_window [class="firefox"]                            focus
 for_window [class="GitKraken"]                          focus
 for_window [class="Typora"]                             focus
 for_window [class="VirtualBox Machine"]                 focus
@@ -298,7 +296,7 @@ for_window [class="Carla2-Multi-Client" window_type="normal"]               move
 for_window [class="Thunderbird" instance="Mail" window_type="normal"]       move scratchpad
 
 # Program assignments
-assign [class="Brave-browser" window_type="normal"]     workspace number $ws1
+assign [class="firefox" window_type="normal"]     workspace number $ws1
 assign [class="code-oss" window_type="normal"]          workspace number $ws2
 assign [class="GLFW-Application"]                       workspace number $ws3
 assign [class="GitKraken"]                              workspace number $ws4
