--- a/i3/config
+++ b/i3/config
@@ -249,7 +249,7 @@ for_window [class="Gpick"]                              floating enable
 for_window [class="Uget-gtk"]                           floating enable
 for_window [class="Nm-connection-editor"]               floating enable
 for_window [class="Gksu-properties"]                    floating enable
-for_window [class="Pamac-manager"]                      floating enable
+for_window [class="Pamac-manager"]                      floating enable, resize set 1100 600, move position center
 for_window [class="Pamac-updater"]                      floating enable
 for_window [class="System-config-printer.py"]           floating enable
 for_window [class="GParted"]                            floating enable
