--- a/i3/config
+++ b/i3/config
@@ -44,6 +44,7 @@ set $xkiller                            /mnt/Gog/Scripts/xkiller.sh
 set $yaws                               /mnt/Gog/repos/yaws/yaws.sh
 set $rofiyaws                           /mnt/Gog/repos/yaws/yaws_rofi.sh
 set $polybar                            /mnt/Gog/Scripts/polylaunch.sh
+set $displayswap                        /mnt/Gog/Scripts/display-swap.sh
 
 # Directories
 set $scrotd                             /mnt/Gog/Pictures/scrots/
@@ -163,7 +164,7 @@ bindsym $mod+Shift+f                    fullscreen toggle global
 # Toggle tiled/floating
 bindsym $mod+space                      floating toggle
 # Move workspace to other monitor
-bindsym $mod+x                          move workspace to output right
+bindsym $mod+x                          exec $displayswap
 # Move container to other monitor
 bindsym $mod+Shift+x                    move container to output right
 # Previous workspace on_output
