Moved from Code to Geany

--- a/i3wsr/config.toml
+++ b/i3wsr/config.toml
@@ -11,6 +11,7 @@ SimpleScreenRecorder = ""
 Carla2-Multi-Client = ""
 Pcmanfm = ""
 code-oss = ""
+Geany = ""
 Mixxx = ""
 kitty = ""
 GParted = ""
