--- a/i3/config
+++ b/i3/config
@@ -109,8 +109,8 @@ bindsym $mod+Shift+0                    move container to workspace number $ws10
 bindsym $mod+Return                     exec $term
 # Firefox
 bindsym $mod+F1                         exec --no-startup-id firefox
-# VS Code
-bindsym $mod+F2                         exec --no-startup-id code
+# Geany
+bindsym $mod+F2                         exec --no-startup-id geany
 # PCmanFM
 bindsym $mod+F3                         exec --no-startup-id pcmanfm $zome
 # Gimp
@@ -287,7 +287,7 @@ for_window [title="stickyterm"]                         floating enable, sticky 
 for_window [class="GLFW-Application"]                   focus
 for_window [class="Gimp"]                               focus
 for_window [class="Mixxx"]                              focus
-for_window [class="code-oss"]                           focus
+for_window [class="Geany"]                              focus
 for_window [class="Audacity"]                           focus
 for_window [class="firefox"]                            focus
 for_window [class="GitKraken"]                          focus
@@ -298,8 +298,8 @@ for_window [class="Carla2-Multi-Client" window_type="normal"]               move
 for_window [class="Thunderbird" instance="Mail" window_type="normal"]       move scratchpad
 
 # Program assignments
-assign [class="firefox" window_type="normal"]     workspace number $ws1
-assign [class="code-oss" window_type="normal"]          workspace number $ws2
+assign [class="firefox" window_type="normal"]           workspace number $ws1
+assign [class="Geany" window_type="normal"]             workspace number $ws2
 assign [class="GLFW-Application"]                       workspace number $ws3
 assign [class="GitKraken"]                              workspace number $ws4
 assign [class="Gimp"]                                   workspace number $ws5
