--- a/i3/config
+++ b/i3/config
@@ -117,8 +117,8 @@ bindsym $mod+F3                         exec --no-startup-id pcmanfm $zome
 bindsym $mod+F4                         exec --no-startup-id gimp
 # VCV Rack
 bindsym $mod+F5                         exec --no-startup-id vcvrack
-# Leafpad
-bindsym $mod+F6                         exec --no-startup-id leafpad
+# Geany simple
+bindsym $mod+F6                         exec --no-startup-id geany -c /home/zero/.config/geany/simple
 # Audacity
 bindsym $mod+F7                         exec --no-startup-id audacity
 # Mixxx
