--- a/i3/config
+++ b/i3/config
@@ -34,17 +34,17 @@ set $Rmon                               "HDMI-1"
 set $term                               kitty
 
 # Scripts
-set $mclip                              /mnt/Gog/Scripts/mclip.py
-set $pmenu                              /mnt/Gog/Scripts/rofi-power.sh
-set $scard                              /mnt/Gog/Scripts/soundcard2.sh
-set $dpmsoff                            /mnt/Gog/Scripts/dpms_off.sh
 set $cheat                              /mnt/Gog/repos/system/i3/README.md
-set $i3msg                              /mnt/Gog/Scripts/rofi_i3_msg.sh
-set $xkiller                            /mnt/Gog/Scripts/xkiller.sh
-set $yaws                               /mnt/Gog/repos/yaws/yaws.sh
-set $rofiyaws                           /mnt/Gog/repos/yaws/yaws_rofi.sh
-set $polybar                            /mnt/Gog/Scripts/polylaunch.sh
-set $displayswap                        /mnt/Gog/Scripts/display-swap.sh
+set $pmenu                              /mnt/Gog/repos/system/Scripts/rofi-power.sh
+set $scard                              /mnt/Gog/repos/system/Scripts/soundcard2.sh
+set $dpmsoff                            /mnt/Gog/repos/system/Scripts/dpms_off.sh
+set $i3msg                              /mnt/Gog/repos/system/Scripts/rofi_i3_msg.sh
+set $xkiller                            /mnt/Gog/repos/system/Scripts/xkiller.sh
+set $yaws                               /mnt/Gog/repos/system/Scripts/yaws.sh
+set $rofiyaws                           /mnt/Gog/repos/system/Scripts/yaws_rofi.sh
+set $polybar                            /mnt/Gog/repos/system/Scripts/polylaunch.sh
+set $displayswap                        /mnt/Gog/repos/system/Scripts/display-swap.sh
+set $sncapture							/mnt/Gog/repos/system/Scripts/surfcap.sh
 
 # Directories
 set $scrotd                             /mnt/Gog/Pictures/scrots/
@@ -107,8 +107,10 @@ bindsym $mod+Shift+0                    move container to workspace number $ws10
 
 # Terminal
 bindsym $mod+Return                     exec $term
-# Firefox
-bindsym $mod+F1                         exec --no-startup-id firefox
+# Vivaldi
+bindsym $mod+F1                         exec --no-startup-id vivaldi-stable
+# Vivaldi restore session
+bindsym $mod+Shift+F1                   exec --no-startup-id vivaldi-stable --restore-last-session
 # Geany
 bindsym $mod+F2                         exec --no-startup-id geany
 # PCmanFM
@@ -117,8 +119,8 @@ bindsym $mod+F3                         exec --no-startup-id pcmanfm $zome
 bindsym $mod+F4                         exec --no-startup-id gimp
 # VCV Rack
 bindsym $mod+F5                         exec --no-startup-id vcvrack
-# Geany simple
-bindsym $mod+F6                         exec --no-startup-id geany -c /home/zero/.config/geany/simple
+# Beaver
+bindsym $mod+F6                         exec --no-startup-id beaver
 # Audacity
 bindsym $mod+F7                         exec --no-startup-id audacity
 # Mixxx
@@ -142,7 +144,7 @@ bindsym $mod+d                          exec --no-startup-id rofi -show drun -di
 # Window menu
 bindsym $mod+g                          exec --no-startup-id rofi -show window
 # Clipboard menu
-bindsym $mod+c                          exec --no-startup-id rofi -modi "clipboard:$mclip menu" -show clipboard && $mclip paste
+bindsym $mod+c                          exec --no-startup-id rofi -modi "clipboard:greenclip print" -show clipboard
 # i3-msg menu
 bindsym $mod+i                          exec --no-startup-id rofi -show i3-msg -modi i3-msg:$i3msg
 # Power menu
@@ -191,6 +193,8 @@ bindsym $mod+Shift+Print                exec flameshot screen -p $scrotd
 bindsym $mod+p                          exec flameshot gui -p $temp
 # Terminal clock
 bindsym $mod+k                          exec $term --title Clock tty-clock -s -c -n
+# SN Capture
+bindsym $mod+Shift+k					exec $sncapture
 
 ## YAWS
 # Random paper
@@ -269,7 +273,8 @@ for_window [title="yaws" class="Yad"]                   floating enable
 for_window [title="yaws" class="feh"]                   floating enable
 for_window [class="Nvidia-settings"]                    floating enable
 for_window [title="butt 0.1.18"]                        floating enable, move position center
-for_window [title="Clock"]                              floating enable, resize set 600 250
+for_window [title="Clock"]                              floating enable, resize set 700 250
+for_window [title="SurfaceNoise"]                       floating enable, resize set 700 250
 for_window [class="Clementine"]                         floating enable
 for_window [class="Gucharmap"]                          floating enable
 for_window [class="Cadence"]                            floating enable, move position center
@@ -278,8 +283,8 @@ for_window [class="QjackCtl"]                           floating enable, move po
 for_window [class="qwinff"]                             floating enable, move position center
 for_window [class="VirtualBox Manager"]                 floating enable, move position center
 for_window [class="Msgcompose" class="Thunderbird"]     floating enable, move position center
-for_window [class="firefox" title="Video player"]       floating enable, move position center
 for_window [class="Maitreya8.bin"]                      floating enable
+for_window [class="Transmission-gtk"]					floating enable, move position center
 for_window [class="Mixxx" title="Preferences"]		    move position center
 
 for_window [title="stickyterm"]                         floating enable, sticky enable, resize set 1100 600, move position center
@@ -289,7 +294,7 @@ for_window [class="Gimp"]                               focus
 for_window [class="Mixxx"]                              focus
 for_window [class="Geany"]                              focus
 for_window [class="Audacity"]                           focus
-for_window [class="firefox"]                            focus
+for_window [class="Vivaldi-stable"]                     focus
 for_window [class="GitKraken"]                          focus
 for_window [class="Typora"]                             focus
 for_window [class="VirtualBox Machine"]                 focus
@@ -297,9 +302,11 @@ for_window [class="VirtualBox Machine"]                 focus
 for_window [class="Carla2-Multi-Client" window_type="normal"]               move scratchpad
 for_window [class="Thunderbird" instance="Mail" window_type="normal"]       move scratchpad
 
+for_window [title="^Picture-in-picture$"]				move workspace number $ws2, resize set 1200 800, move position center, sticky enable
+
 # Program assignments
-assign [class="firefox" window_type="normal"]           workspace number $ws1
-assign [class="Geany" window_type="normal"]             workspace number $ws2
+assign [class="Vivaldi-stable" window_type="normal"]    workspace number $ws1
+assign [class="Geany" window_type="normal"]				workspace number $ws2
 assign [class="GLFW-Application"]                       workspace number $ws3
 assign [class="GitKraken"]                              workspace number $ws4
 assign [class="Gimp"]                                   workspace number $ws5
@@ -324,5 +331,5 @@ exec_always --no-startup-id                             nm-applet
 exec_always --no-startup-id                             i3altlayout
 exec_always --no-startup-id                             i3wsr --config ~/.config/i3wsr/config.toml --icons awesome
 exec_always --no-startup-id                             $scard
-exec_always --no-startup-id                             $mclip daemon
+exec_always --no-startup-id                             greenclip daemon
 exec_always --no-startup-id                             $polybar
