--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -27,16 +27,19 @@ frame-opacity = 0.7;
 inactive-opacity-override = false;
 # inactive-dim = 0.2;
 # inactive-dim-fixed = true;
-# blur-background = true;
+blur-background = true;
 # blur-background-frame = true;
 blur-kern = "3x3box";
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
-# blur-background-fixed = true;
+blur-background-fixed = true;
+
 blur-background-exclude = [
 	"window_type = 'dock'",
 	"window_type = 'desktop'",
 	"_GTK_FRAME_EXTENTS@:c"
 ];
+# bspwm preselection area opacity:
+opacity-rule = [ "10:class_g = 'Bspwm' && class_i = 'presel_feedback'" ];
 # opacity-rule = [ "80:class_g = 'URxvt'" ];
 
 # max-brightness = 0.66
