Switch back from geany to vscode
plus many others...

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -40,7 +40,7 @@ blur-background-exclude = [
 ];
 # bspwm preselection area opacity:
 opacity-rule = [ "10:class_g = 'Bspwm' && class_i = 'presel_feedback'" ];
-# opacity-rule = [ "80:class_g = 'URxvt'" ];
+# opacity-rule = [ "80:class_g = 'code-oss'" ];
 
 # max-brightness = 0.66
 
