switching to spectrwm

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Bitstream Vera Sans Mono
-bold_font        Bitstream Vera Sans Mono Bold
-italic_font      Bitstream Vera Sans Mono Oblique
-bold_italic_font Bitstream Vera Sans Mono Bold Oblique
+font_family      JetBrains Mono Nerd Font
+#bold_font        Bitstream Vera Sans Mono Bold
+#italic_font      Bitstream Vera Sans Mono Oblique
+#bold_italic_font Bitstream Vera Sans Mono Bold Oblique
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
@@ -283,7 +283,7 @@ enabled_layouts tall,grid,stack,vertical
 #: that setting a non-zero window margin overrides this and causes all
 #: borders to be drawn.
 
-# window_margin_width 0.0
+window_margin_width 6.0
 
 #: The window margin (in pts) (blank area outside the border)
 
@@ -293,7 +293,7 @@ enabled_layouts tall,grid,stack,vertical
 #: visible. Negative values will cause the value of
 #: window_margin_width to be used instead.
 
-# window_padding_width 0.0
+window_padding_width 6.0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border)
