--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -17,21 +17,15 @@ size-transition = true
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
 corner-radius = 10.0;
 rounded-corners-exclude = [
-  #"window_type = 'normal'",
-  "class_g = 'awesome'",
-  "class_g = 'URxvt'",
-  "class_g = 'XTerm'",
-  #"class_g = 'kitty'",
-  "class_g = 'Alacritty'",
+  "window_type = 'tooltip'",
+  "window_type = 'panel'",
+  "class_g = 'Dunst'",
   "class_g = 'Polybar'",
-  "class_g = 'code-oss'",
-  #"class_g = 'TelegramDesktop'",
-  "class_g = 'firefox'",
-  "class_g = 'Thunderbird'"
+  "class_g = 'spectrwm'"
 ];
 round-borders = 1;
 round-borders-exclude = [
-  #"class_g = 'TelegramDesktop'",
+
 ];
 
 #################################
@@ -44,7 +38,7 @@ round-borders-exclude = [
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = false;
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -256,32 +250,32 @@ opacity-rule = [
 # blur-kern = ''
 # blur-kern = "3x3box";
 
-# blur: {
-#   # requires: https://github.com/ibhagwan/picom
-#   method = "kawase";
-#   #method = "kernel";
-#   strength = 5;
-#   # deviation = 1.0;
-#   # kernel = "11x11gaussian";
-#   background = false;
-#   background-frame = false;
-#   background-fixed = false;
-#   kern = "3x3box";
-# }
-# 
-# # Exclude conditions for background blur.
-# blur-background-exclude = [
-#   #"window_type = 'dock'",
-#   #"window_type = 'desktop'",
-#   #"class_g = 'URxvt'",
-#   #
-#   # prevents picom from blurring the background
-#   # when taking selection screenshot with `main`
-#   # https://github.com/naelstrof/maim/issues/130
-#   "class_g = 'slop'",
-#   "_GTK_FRAME_EXTENTS@:c"
-# ];
-# 
+blur: {
+  # requires: https://github.com/ibhagwan/picom
+  method = "kawase";
+  #method = "kernel";
+  strength = 5;
+  # deviation = 1.0;
+  # kernel = "11x11gaussian";
+  background = false;
+  background-frame = false;
+  background-fixed = false;
+  kern = "3x3box";
+}
+
+# Exclude conditions for background blur.
+blur-background-exclude = [
+  #"window_type = 'dock'",
+  #"window_type = 'desktop'",
+  #"class_g = 'URxvt'",
+  #
+  # prevents picom from blurring the background
+  # when taking selection screenshot with `main`
+  # https://github.com/naelstrof/maim/issues/130
+  "class_g = 'slop'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
+
 
 #################################
 #       General Settings        #
@@ -319,7 +313,7 @@ mark-ovredir-focused = true;
 # shaped windows. The accuracy is not very high, unfortunately.
 #
 # detect-rounded-corners = false
-detect-rounded-corners = true;
+detect-rounded-corners = false;
 
 # Detect '_NET_WM_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_OPACITY' of client windows to frame windows.
